--- a/.github/workflows/AiPi-helloworld.yml
+++ b/.github/workflows/AiPi-helloworld.yml
@@ -10,7 +10,7 @@ on:
     - 'v*'   
 jobs:
   build:
-    runs-on: ubuntu--latest
+    runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
 
     steps:
