--- a/.github/workflows/AiPi-helloworld.yml
+++ b/.github/workflows/AiPi-helloworld.yml
@@ -21,25 +21,20 @@ jobs:
         DEBIAN_FRONTEND: noninteractive
       run: |
         sudo apt-get update && sudo apt-get full-upgrade -y && sudo apt-get upgrade -y && sudo apt-get autoremove -y
-        sudo apt-get install make gcc vim cmake git ninja-build -y    
-    - name: Clone source code
+        sudo apt-get install make gcc vim cmake git ninja-build -y
+        sudo apt-get install autoconf automake autotools-dev curl python3 libmpc-dev libmpfr-dev libgmp-dev gawk build-essential bison flex texinfo gperf libtool patchutils bc zlib1g-dev libexpat-dev -y
+    - name: Clone source code and Build Firmware
       run: |
         cd /opt
         git clone https://github.com/Ai-Thinker-Open/AiPi-Open-Kits.git
-        cd /opt/AiPi-Open-Kits
-        git clone https://github.com/Ai-Thinker-Open/aithinker_Ai-M6X_SDK.git
-        
-    - name: Build Firmware
-      run: |
-        cd /opt/AiPi-Open-Kits
+        cd AiPi-Open-Kits
         git submodule init
         git submodule update
-        cd /opt/AiPi-Open-Kits/aithinker_Ai-M6X_SDK
-        chmod +x /opt/AiPi-Open-Kits/aithinker_Ai-M6X_SDK/install.sh
-        sudo sh /opt/AiPi-Open-Kits/aithinker_Ai-M6X_SDK/install.sh
-        chmod +x /opt/AiPi-Open-Kits/aithinker_Ai-M6X_SDK/export.sh
-        sudo sh /opt/AiPi-Open-Kits/aithinker_Ai-M6X_SDK/export.sh
-        cd /opt/AiPi-Open-Kits/aithinker_Ai-M6X_SDK/examples/helloworld/
+        cd aithinker_Ai-M6X_SDK
+        . install.sh
+        . export.sh
+        cd examples
+        cd helloworld
         make     
     - name : Upload packages
       uses: actions/upload-artifact@main
