--- a/.github/workflows/AiPi-helloworld.yml
+++ b/.github/workflows/AiPi-helloworld.yml
@@ -36,10 +36,11 @@ jobs:
         cd examples
         cd helloworld
         make
-        tar -zcvf /opt/AiPi-helloworld.gz /opt/AiPi-Open-Kits/aithinker_Ai-M6X_SDK/examples/helloworld/build/build_out/
+        cd /opt/AiPi-Open-Kits/aithinker_Ai-M6X_SDK/examples/helloworld/build/build_out/
+        zip AiPi-helloworld.zip helloworld_bl616.bin.ota helloworld_bl616.bin.xz.ota helloworld_bl616.bin.xz
     - name : Upload packages
       uses: actions/upload-artifact@main
       if: always()
       with:
         name: AiPi-helloworld 
-        path: /opt/AiPi-helloworld.gz
+        path: /opt/AiPi-Open-Kits/aithinker_Ai-M6X_SDK/examples/helloworld/build/build_out/AiPi-helloworld.zip
