--- a/.github/workflows/AiPi-helloworld.yml
+++ b/.github/workflows/AiPi-helloworld.yml
@@ -37,7 +37,7 @@ jobs:
         cd helloworld
         make
         cd /opt/AiPi-Open-Kits/aithinker_Ai-M6X_SDK/examples/helloworld/build/build_out/
-        zip AiPi-helloworld.zip helloworld_bl616.bin.ota helloworld_bl616.bin.xz.ota helloworld_bl616.bin.xz
+        zip -r AiPi-helloworld.zip helloworld_bl616.bin.ota helloworld_bl616.bin.xz.ota helloworld_bl616.bin.xz
     - name : Upload packages
       uses: actions/upload-artifact@main
       if: always()
