--- a/.github/workflows/AiPi-helloworld.yml
+++ b/.github/workflows/AiPi-helloworld.yml
@@ -47,9 +47,9 @@ jobs:
     - name: Create Release and Upload Release Asset
       uses: softprops/action-gh-release@v1
       with:
-        tag_name: ${{ github.ref }}
-        name: ${{ github.ref }}
-        body: TODO New Release.
+        #tag_name: ${{ github.ref }}
+        name: AiPi-helloworld
+        #body: TODO New Release.
         #body_path: CHANGELOG.txt
         draft: false
         prerelease: false
