--- a/.github/workflows/AiPi-helloworld.yml
+++ b/.github/workflows/AiPi-helloworld.yml
@@ -47,7 +47,7 @@ jobs:
     - name: Create Release and Upload Release Asset
       uses: softprops/action-gh-release@v1
       with:
-        #tag_name: ${{ github.ref }}
+        tag_name: V1
         name: AiPi-helloworld
         #body: TODO New Release.
         #body_path: CHANGELOG.txt
